hphp/test/zend/good/Zend/tests/variadic/variadic_changed_byref_error.php.expectf

Fatal error: Declaration of MySQL::query() must be compatible with that of DB::query() in %s/variadic_changed_byref_error.php on line 7
